fix(folder-tabs-item): removed double border-left

--- a/tegel/src/components/tabs/folder-tabs/folder-tabs-item/sdds-folder-tabs-item.scss
+++ b/tegel/src/components/tabs/folder-tabs/folder-tabs-item/sdds-folder-tabs-item.scss
@@ -29,7 +29,6 @@
 
     ::slotted(*) {
       border-left-color: var(--sdds-folder-tab-divider-color);
-      border-left-color: var(--sdds-folder-tab-divider-color);
       border-top: 2px solid var(--sdds-folder-tab-background);
       color: var(--sdds-folder-tab-item-color);
     }
